--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.8</version>
+		<version>2.4.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.redislabs.edu</groupId>
 	<artifactId>redi2read</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>redi2read</name>
-	<description>Bookstore Web Services Powered by Redis.</description>
+	<description>A Book Store Web Service powered by Redis</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -29,7 +29,20 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+  	<groupId>com.redislabs</groupId>
+  		<artifactId>jredisgraph</artifactId>
+  		<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.redislabs</groupId>
+			<artifactId>jrejson</artifactId>
+			<version>1.5.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -47,12 +60,22 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+  		<groupId>com.redislabs</groupId>
+  		<artifactId>spring-redisearch</artifactId>
+  		<version>3.0.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
+<repositories>
+		<repository>
+			<id>snapshots-repo</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</repository>
+	</repositories>
 	<build>
 		<plugins>
 			<plugin>
